--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
             <article class="uiux-card">
               <div class="card-media">
                 <!-- 放 mockup 圖 -->
-                <img src="image_ps/UIUX/2(1).jpg" alt="Random Gifts App UI" />
+                <img src="image_ps/UIUX/2(1).jpg" alt="Random Gifts App UI" loading="eager" fetchpriority="high" />
               </div>
               <div class="card-meta">
                 <h3>Random Gifts App</h3>
@@ -57,7 +57,7 @@
             <!-- Project 2 -->
             <article class="uiux-card active">
               <div class="card-media">
-                <img src="image_ps/UIUX/1(1).jpg" alt="Random Gifts App UI" />
+                <img src="image_ps/UIUX/1(1).jpg" alt="Random Gifts App UI"  loading="eager" fetchpriority="high"/>
               </div>
               <div class="card-meta">
                 <h3>Android TTS OCR Converter</h3>
@@ -67,7 +67,7 @@
             <!-- Project 3 -->
             <article class="uiux-card">
               <div class="card-media">
-                <img src="image_ps/UIUX/40.jpg" alt="Random Gifts App UI" />
+                <img src="image_ps/UIUX/40.jpg" alt="Random Gifts App UI" loading="lazy" />
               </div>
               <div class="card-meta">
                 <h3>Personal Portfolio</h3>
