Added UI/UX interface and optimized image loading.

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
 
             <article class="uiux-card">
               <div class="card-media">
-                <img src="image_ps/UIUX/40.jpg" alt="Random Gifts App UI" loading="lazy" />
+                <img src="image_ps/UIUX/51.jpg" alt="Random Gifts App UI" loading="lazy" />
               </div>
               <div class="card-meta">
                 <h3>Personal Portfolio</h3>
@@ -104,7 +104,7 @@
   </main>
 
   <!-- =====================
-       Footer（可選）
+       Footer
   ====================== -->
   <!-- <footer class="site-footer">
     <p>© 2025 Your Name</p>
